# GoknarEngine

./: .gitignore  .gitmodules  ClearProjectFiles.bat  GenerateProjectFiles.bat  README.md  bin - Shortcut.lnk  github_ssh  github_ssh.pub  premake5 - Copy.lua  premake5.lua
ExampleProject/: Build.sh  CMakeLists.txt
ExampleProject/Config/: Build.ini  GameConfig.ini
ExampleProject/Content/: AssetContainer
ExampleProject/Content/Animations/: AG_DefaultCharacter
ExampleProject/Content/MaterialFunctions/: MF_WindDisplacement
ExampleProject/Content/Materials/: M_DefaultCharacter  M_DefaultMaterial  M_Matilda  M_Panner  M_PhysicsBlocks
ExampleProject/Content/Meshes/: SM_Bullet.fbx  SM_HelloMesh.fbx  SM_TreeBirch_01_Red.FBX
ExampleProject/Content/Scenes/: DefaultScene  DefaultScene.xml  Scene_Terrain_
ExampleProject/Editor/Animations/: AG_DefaultCharacter
ExampleProject/Editor/MaterialFunctions/: MF_WindDisplacement
ExampleProject/Editor/Materials/: M_DefaultCharacter  M_DefaultMaterial  M_Matilda  M_PBR_BrushedGold  M_PBR_CeramicWhite  M_PBR_Matilda  M_PBR_NeonPanel  M_PhysicsBlocks
ExampleProject/Source/: Game.cpp  Game.h  GameState.cpp  GameState.h
ExampleProject/Source/Characters/: BaseCharacter.cpp  BaseCharacter.h  DefaultCharacter.cpp  DefaultCharacter.h
ExampleProject/Source/Components/: DefaultCharacterMovementComponent.cpp  DefaultCharacterMovementComponent.h
ExampleProject/Source/Controllers/: DefaultCharacterController.cpp  DefaultCharacterController.h  FreeCameraController.cpp  FreeCameraController.h
ExampleProject/Source/Data/: MaterialInitializer.cpp  MaterialInitializer.h
ExampleProject/Source/Objects/: Bullet.cpp  Bullet.h  FreeCameraObject.cpp  FreeCameraObject.h  Terrain.cpp  Terrain.h  TerrainGrassSpawner.cpp  TerrainGrassSpawner.h  Weapon.cpp  Weapon.h
ExampleProject/Source/UI/: ImGuiOpenGL.cpp  ImGuiOpenGL.h  MainHUD.cpp  MainHUD.h  UIContext.cpp  UIContext.h  UIUtils.cpp  UIUtils.h  UIWidgets.cpp  UIWidgets.h
GameProject/: .cproject  .project  Build.sh  CMakeLists.txt  DefaultSceneFragmentShader.glsl  DefaultSceneVertexShader.glsl  DeferredRendering.frag  DeferredRendering.vert  GameProject.vcxproj  imgui.ini
GameProject/ArcherScene/Source/: Game.cpp  GameController.h
GameProject/Content/: Cube.001VertexShader.glsl  MeshVertexShader.glsl  MutantMesh.001FragmentShader.glsl  RenderTestScene.xml  SM_Arrow.fbx  SM_Bow.fbx
GameProject/Content/Meshes/: Floor.ply  SM_Arrow.fbx  SM_Ball.fbx  SM_Bow.fbx  SM_Box.fbx  SM_Cube.fbx  SM_Floor.fbx  SM_FloorAndCeil.fbx  SM_HalfRadiusSphere.fbx  SM_Plane.fbx  SM_Sphere.fbx  SM_Wall.fbx  SkeletalMesh_Akai.fbx  SkeletalMesh_BasicSkeletalMesh.fbx  SkeletalMesh_EpicChest.fbx  SkeletalMesh_Michelle.fbx  SkeletalMesh_Mutant.fbx  SkeletalMesh_TestBox.fbx  StaticMesh_BigFloor.fbx  StaticMesh_Mutant.fbx  StaticMesh_SushiBar.fbx
GameProject/Content/Scenes/: 2DScene.xml  2DScene_.xml  2_5DScene.xml  Airplane.xml  BunnyScene.xml  CubeScene.xml  GGJ2020.xml  MonkeyScene.xml  Scene.xml  Scene_2.xml  ShadowMapScene.xml  SimpleBox.xml  ThreeDifferentShapes.xml  ThreeDifferentShapesTransformations.xml  ThreeSpheres.xml  Village.xml
GameProject/Content/Shaders/: 2DVertexShader.glsl  GroundGridFragmentShader.glsl  GroundGridVertexShader.glsl  OnlyDiffuseFragmentShader.glsl  SkeletalMeshBoneWeightTestFragmentShader.glsl  SkeletalMeshBoneWeightTestVertexShader.glsl  TextureFragmentShader.glsl  TextureVertexShader.glsl
GameProject/Content/Textures/: testTexture.ppm
GameProject/Shaders/: 2DScene_TextureFragmentShader.glsl  OnlyDiffuseFragmentShader.glsl  TextureFragmentShader.glsl  TextureVertexShader.glsl
GameProject/Source/: Archer.cpp  Archer.h  ArcherCharacter.cpp  ArcherCharacter.h  ArcherCharacterController.cpp  ArcherCharacterController.h  ArcherGameController.cpp  ArcherGameController.h  ArcherGameController_BACKUP_12800.cpp  Dancer.cpp  Dancer.h  Fire.cpp  Fire.h  Game.cpp  Game.h  GameController.cpp  GameController.h  InterpolatedValue.h  LightController.cpp  LightController.h  MaterialSphereSpawner.cpp  MaterialSphereSpawner.h  Mutant.cpp  Mutant.h  PhysicsArcher.cpp  PhysicsArcher.h  PhysicsArcherGameController.cpp  PhysicsArcherGameController.h  PhysicsObjectManager.cpp  PhysicsObjectManager.h  PhysicsObjectSpawner.cpp  PhysicsObjectSpawner.h  RandomGrassSpawner.cpp  RandomGrassSpawner.h  RigidBodyManager.cpp  RigidBodyManager.h  Sun.cpp  Sun.h
GameProject/Source/Components/: ArcherCharacterMovementComponent.cpp  ArcherCharacterMovementComponent.h  ArcherMovementComponent.cpp  ArcherMovementComponent.h  ArcherPhysicsMovementComponent.cpp  ArcherPhysicsMovementComponent.h  PhysicsArcherMovementComponent.cpp  PhysicsArcherMovementComponent.h  ProjectileMovementComponent.cpp  ProjectileMovementComponent.h
GameProject/Source/Controllers/: FreeCameraController.cpp  FreeCameraController.h
GameProject/Source/Objects/: Arrow.cpp  Arrow.h  AxisObject.cpp  AxisObject.h  Ball.cpp  Ball.h  Bow.cpp  Bow.h  CannonBall.cpp  FreeCameraObject.cpp  FreeCameraObject.h  MaterialSphere.cpp  MaterialTestObject.cpp  Monkey.cpp  Monkey.h  MultipleCollisionComponentObject.cpp  MultipleCollisionComponentObject.h  Object.cpp  Object.h  PhysicsBox.cpp  PhysicsBox.h  PhysicsCapsule.cpp  PhysicsCapsule.h  PhysicsSphere.cpp  RigidBodyObject.cpp  (+5 more)
GameProject/src/: Airplane.cpp  Airplane.h  Bat.cpp  Bat.h  BoxGameObject.cpp  BoxGameObject.h  CameraController.cpp  CameraController.h  Deceased.cpp  Deceased.h  Environment.cpp  Game.cpp  Game.h  GameController.h  GridManager.h  Hyena.cpp  Hyena.h  MovableObject.h  MovableObjectFactory.cpp  RenderToTextureObject.cpp  RenderToTextureObject.h  RepairableObject.h  TestSprite.cpp  TestSprite.h
Goknar/: CMakeLists.txt  ClassDiagram.cd
Goknar/Source/: Goknar.h  pch.h
Goknar/Tools/: PakToolMain.cpp
Goknar/src/: Goknar.h  pch.h
Tests/: Build.sh  CMakeLists.txt
Tests/Source/: Camera_Tests.cpp  Camera_Tests.h  Component_Tests.cpp  Component_Tests.h  ITestBase.h  ObjectBase_Tests.cpp  ObjectBase_Tests.h  TestApplication.cpp  TestApplication.h  Tests.cpp  Tests.h  TestsCore.h
(+898 files in other folders)
